# chessengine

./: .clang-tidy  .gitignore  CLI.cpp  CLI.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Evaluator.cpp  Evaluator.h  HashCodes.h  LICENSE  Move.h  MoveGenerator.cpp  MoveGenerator.h  Piece.h  README.md  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h  Util.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
assets/: opening_book.txt
src/: CLI.cpp  CLI.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  EvaluationValues.h  Evaluator.cpp  Evaluator.h  HashCodes.h  Logger.cpp  Logger.h  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveParser.h  Piece.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h  Util.h
tests/: CMakeLists.txt  HashTest.cpp  RepetitionTest.cpp  TranspositionTest.cpp  UtilTest.cpp
uml/: chessboard.puml  move.puml  piece.puml
